[tool.poetry]
name = "grab-js"
version = "0.0.4"
description = "Grab JavaScript Code Blocks"
authors = ["Mitch Haddadi <12067255+dfirsec@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "grab_js"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
jsbeautifier = "^1.15.1"
lxml = "^5.3.0"
requests = "^2.32.3"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
